# file_sync

./: .gitignore  Makefile  QUICK_START.md  README-Windows.txt  README.md  install-windows.py  install.py  pyproject.toml  requirements.txt  setup-windows.bat  setup.py  start-gui.py  start-localsync  start-localsync.sh  start.py  start.sh
localsync/: __init__.py  auth.py  cli.py  config.py  discovery.py  file_dialog.py  groups.py  gui.py  menu.py  new_gui.py  transfer.py
localsync/gui/: __init__.py  workers.py
localsync/gui/core/: app_controller.py  auth_manager.py  transfer_manager.py
localsync/gui/ui/: main_window.py
localsync/gui/ui/widgets/: __init__.py  devices_tab.py
localsync/tests/: test_transfer.py
localsync/transfer/: __init__.py  base_transfer.py  file_receiver.py  file_sender.py  streaming.py
localsync/utils/: compression.py  crypto.py  progress.py
scripts/: install.bat  install.sh  run.bat  run.sh
src/: __init__.py  __main__.py  auth.py  cli.py  config.py  discovery.py  file_dialog.py  groups.py  menu.py  new_gui.py
src/gui/: workers.py
src/gui/core/: __init__.py  app_controller.py  device_manager.py
src/gui/ui/: __init__.py  login_dialog.py  main_window.py
src/gui/ui/widgets/: devices_tab.py  history_tab.py  settings_tab.py  transfer_tab.py
src/transfer/: base_transfer.py  file_receiver.py  file_sender.py  protocols.py  streaming.py  utils.py
src/utils/: __init__.py  compression.py  crypto.py  progress.py
